--- a/docs/3.1_files.md
+++ b/docs/3.1_files.md
@@ -1,38 +1,37 @@
 
-# Loading files
+# 加载文件
 
-The goal of this lecture-lab is to learn how to extract data from files on your laptop's disk. We'll load words from a text file and numbers from data files.  Along the way, we'll learn more about filenames and paths to files. The first two elements of our generic analytics program template says to acquire data and then load it into a data structure:
+本讲座的目的是学习如何从笔记本电脑磁盘上的文件中提取数据。 我们将加载文本文件中的单词和数据文件中的数字。 在此过程中，我们将了解文件名和文件路径的更多信息。 我们的通用分析程序模板的前两个元素，表示获取数据然后将其加载到数据结构中：
 
-1. Acquire data, which means finding a suitable file or collecting data from the web and storing in a file
-2. Load data from disk and place into memory organized into data structures
+1. 获取数据，这意味着找到合适的文件，或从 Web 收集数据并存储在文件中
+2. 从磁盘加载数据并放入组织成数据结构的内存中
 
-For now, we'll satisfy the first step by just downloading ready-made data files from the web by hand. In [MSAN692 -- Data Acquisition](https://github.com/parrt/msan692), we'll learn all about how to pull data from the web programmatically. This lecture focuses on the second step in the analytics program template.
+目前，我们只需手动从网上下载现成的数据文件，即可满足第一步。在[ MSAN692 - 数据采集](https://github.com/parrt/msan692)中，我们将学习如何以编程方式从 Web 提取数据。 本讲座重点介绍分析程序模板的第二步。
 
-As we go along, I'm going to repeatedly ask you to type in a bunch of these examples. It's critical that you learn the code patterns associated with loading data from files. Please type in your code without cutting and pasting.
+随着我们继续，我将反复要求你输入一些这样的例子。 了解从文件加载数据的代码模式至关重要。 请输入您的代码，不要剪切和粘贴。
 
-## What are files?
+## 什么是文件
 
-As we've discussed before, both the disk and RAM are forms of memory. RAM is much faster (but smaller) than the disk but RAM all disappears when the power goes out. Disks, on the other hand, are persistent. A file is simply a chunk of data on the disk identified by a filename. You use files all the time. For example, we can double-click on a text file or Excel file, which opens an application to display those files. 
+正如我们之前所讨论的，磁盘和 RAM 都是内存的形式。 RAM 比磁盘快得多（但更小）但是当电源耗尽时 RAM 全部消失。 另一方面，磁盘是持久的。 文件只是由文件名标识的，磁盘上的一大块数据。 您一直使用文件。例如，我们可以双击文本文件或 Excel 文件，这将打开一个应用程序来显示这些文件。
 
-We need to be able to write Python programs that read data from files just like, say, Excel does.  Accessing data in RAM is very easy in a Python program, we simply refer to the various elements in a list using an index, such as `names[i]`.  File data is less convenient to access  because we have to explicitly load the file into working memory first.  For example, we might want to load a list of names from a file into a `names` list. 
+我们需要能够编写从文件中读取数据的 Python 程序，就像 Excel 那样。 在 Python 程序中访问 RAM 中的数据非常容易，我们只需使用索引来引用列表中的各种元素，例如`names [i]`。 访问文件数据不太方便，因为我们必须首先将文件显式加载到工作内存中。 例如，我们可能希望将文件中的名称列表加载到`names`列表中。
 
-**If a file is too big to fit into memory all at once, we have to process the data in chunks.**  For now, let's assume all files fit in memory. 
+**如果文件太大而无法同时放入内存，我们必须以块的形式处理数据。**现在，让我们假设所有文件都适合内存。
 
-Even so, accessing files is a bit of a hassle because we must explicitly tell Python to open a file and (often) then close it when we're done. We also must distinguish between reading and writing from/to a file, which dictates the mode in which we open the file.  We can open the file in read, write, or append mode. For this lab, we will only concern ourselves with the default case of "opening a file for reading." Here is how to open a file called `foo.txt` in read mode (the default) then immediately close that file:
+即便如此，访问文件也有点麻烦，因为我们必须明确地让 Python 打开一个文件，然后（通常）在我们完成后关闭它。 我们还必须区分对文件的读取和写入，这决定了我们打开文件的模式。 我们可以在读，写或追加模式下打开文件。 对于本实验，我们只关注“打开文件来读取”的默认情况。 以下是在读取模式（默认）下打开一个名为`foo.txt`的文件，然后立即关闭该文件的方式：
 
 ```
 f = open('foo.txt')  # open for read mode
 f.close()            # ok, we're done
 ```
 
-Hmm...what kind of object is returned from `open()` and stored in `f`? Why do we have to close files?
+嗯......从`open()`返回什么样的对象并存储在`f`中？ 为什么我们要关闭文件？
 
-## File descriptors
+## 文件描述符
 
-When we open a file, Python gives us a "file object" that is really just a handle or descriptor that the operating system gives us. It's a unique identifier and how the operating system likes to identify a file that we work with. **The file object is not the filename and is also not the file itself on the disk.** It's really just a descriptor and a reference to the file.
+当我们打开文件时，Python 为我们提供了一个“文件对象”，它实际上只是操作系统为我们提供的句柄或描述符。 它是一个唯一的标识符，以及操作系统识别我们使用的文件的方式。 **文件对象不是文件名，也不是磁盘上的文件本身。**它实际上只是一个描述符和文件的引用。
 
-We will use a filename to get a file object using `open()` and use the file object to get the file contents.
-
+我们将使用文件名来使用`open()`获取文件对象，并使用文件对象来获取文件内容。
 
 ```python
 f = open("data/prices.txt") # or just "prices.txt"
@@ -48,27 +47,27 @@ True
 '''
 ```
 
+（将`TextIOWrapper`看作*文件*。）
 
-(Think of `TextIOWrapper` as *file*.)
+关闭操作通知操作系统您不再需要该资源。 操作系统一次只能打开这么多文件，因此您应该在使用完毕后关闭文件。
 
-The close operation informs the operating system that you no longer need that resource. The operating system can only open so many files at once so you should close files when you're done using them. 
+稍后，当您学习将数据写入文件时，关闭操作也很重要。 关闭文件会刷新内存缓冲区中的，需要写入的所有数据。 从Python文档：
 
-Later, when you are learning to write data to files, the close operation is also important. Closing a file flushes any data in memory buffers that needs to be written. From the Python documentation:
+> “编写程序的一个常见的错误是，你使用代码将所需的所有数据添加到文件中，但程序最终不会创建文件。通常这意味着你忘了关闭文件。”
 
-> "It is a common bug to write a program where you have the code to add all the data you want to a file, but the program does not end up creating a file. Usually this means you forgot to close the file."
+<img src="img/redbang.png" width="30" align="left"> 
 
-<img src="img/redbang.png" width="30" align="left"> To help avoid confusion, keep this analogy in mind. Your house contents (file) is different than your address (file name) and different than a piece of paper with the address written on it (file descriptor). More specifically:
+为了避免混淆，请记住这个比喻。 您的房屋内容（文件）与您的地址（文件名）不同，并且与写有地址的文件（文件描述符）不同。进一步来说：
 
-1. The filename is a string that identifies a file on the disk. It can be fully qualified or relative to the current working directory.
+1. 文件名是一个标识磁盘上文件的字符串。 它可以是完全限定的或相对于当前工作目录。
 
-2. The file object is not the filename and is also not the file itself on the disk. It's really just a descriptor and a reference to the file.
+2. 文件对象不是文件名，也不是磁盘上的文件本身。 它实际上只是一个描述符和文件的引用。
 
-3. The contents of the file is different than the filename and the file (descriptor) object that Python gives us.
+3. 文件的内容不同于 Python 给我们的文件名和文件对象（描述符）。
 
-### Python WITH statement
+### Python WITH 语句
 
-More recent versions of Python provide an excellent mechanism to avoid forgetting the file close operation. The `with` statement is more general, but we will use it just for automatically closing files. Even if there is an exception inside the `with` statement that forces the program to terminate, the close operation occurs. Here is how
-
+更新版本的 Python 提供了一种很好的机制来避免忘记文件关闭操作。 `with`语句更通用，但我们只是用它来自动关闭文件。 即使`with`语句中有强制程序终止的异常，关闭操作也会发生。 这是使用方式：
 
 ```python
 with open("data/prices.txt") as f:
@@ -85,7 +84,7 @@ True
 '''
 ```
 
-## File names and paths
+## 文件名称和路径
 
 You know what a file name is because you've created lots of files before. (BTW, another reminder not to use spaces in your file or directory names.) *Paths* are unique specifiers or locators for directories or files. A *fully-qualified* filename gives a description of the directories from the root of the file system, separated by `/`. The root of the file system is identified with `/` (forward slash) at the start of a pathname. You are probably used to seeing it as "Macintosh HD" but from a programming point of view, it's just `/`. On Windows, which we will not consider here, the root includes the drive specification and a backslash like `C:\`. Here's a useful diagram showing the components of a fully qualified pathname to a file called `view.py`:
 
