--- a/docs/3.1_files.md
+++ b/docs/3.1_files.md
@@ -86,27 +86,28 @@ True
 
 ## 文件名称和路径
 
-You know what a file name is because you've created lots of files before. (BTW, another reminder not to use spaces in your file or directory names.) *Paths* are unique specifiers or locators for directories or files. A *fully-qualified* filename gives a description of the directories from the root of the file system, separated by `/`. The root of the file system is identified with `/` (forward slash) at the start of a pathname. You are probably used to seeing it as "Macintosh HD" but from a programming point of view, it's just `/`. On Windows, which we will not consider here, the root includes the drive specification and a backslash like `C:\`. Here's a useful diagram showing the components of a fully qualified pathname to a file called `view.py`:
+你知道文件名是什么，因为之前你已经创建了很多文件。 （顺便说一下，另一个提醒是，不要在文件或目录名中使用空格。）*路径*是目录或文件的唯一限定符或定位符。一个*完全限定的*文件名给出了来自文件系统根目录的描述，用`/`分隔。文件系统的根在路径名的开头用`/`（正斜杠）标识。您可能习惯将其视为“Macintosh HD”，但从编程的角度来看，它只是`/`。在 Windows 上，我们不会在这里考虑，根目录包括盘符和反斜杠，如`C:\`。 这是一个有用的图表，显示了名为`view.py`的文件的完全限定路径名的成分：
 
 <img src="img/path-names.png" width="750">
 
-As a shorthand, you can start a path with `~`, which means "my home directory". On a Mac that's `/Users/parrt` or whatever your user ID is. On Linux, it's probably `/home/parrt`.
+作为简写，你可以用`~`开始一个路径，这意味着“我的主目录”。 在 Mac 上为`/Users/parrt`或您的任何用户 ID。 在 Linux 上，它可能是`/home/parrt`。
 
-The last element in a path is either a filename or a directory. For example to refer to the directory holding `view.py` in the above diagram, use path `/Users/parrt/classes/msan501/images-parrt`. Or, using the shortcut, the fully qualified path is `~/classes/msan501/images-parrt`. Here's an example bash session that uses some fully qualified paths:
+路径中的最后一个元素是文件名或目录。 例如，要引用上图中保存`view.py`的目录，请使用路径`/Users/parrt/classes/msan501/images-parrt`。或者，使用简写，完全限定的路径是`~/classes/msan501/images-parrt`。这是一个使用一些完全限定路径的 bash 会话示例：
 
 ```bash
 $ ls /Users/parrt/classes/msan501/images-parrt/view.py
 /Users/parrt/classes/msan501/images-parrt/view.py
-$ cd /Users/parrt/classes/msan501/images-parrt $ pwd
+$ cd /Users/parrt/classes/msan501/images-parrt
+$ pwd
 /Users/parrt/classes/msan501/images-parrt
 $ cd ~/classes/msan501/images-parrt
 $ pwd
 /Users/parrt/classes/msan501/images-parrt
 ```
 
-### Current working directory
+### 当前工作目录
 
-All programs run with the notion of a *current working directory*. So, if a program is running inside the directory `~/classes/msan501/images-parrt`, then the program could refer to any data files sitting in that directory with just a file name--no path is required.  For example, let's use the `ls` program to demonstrate the different kinds of paths.
+所有程序都以*当前工作目录*的概念运行。 因此，如果一个程序在`~/classes/msan501/images-parrt`目录中运行，那么程序可以仅仅使用文件名，引用那个目录中的任何数据文件 - 不需要路径。例如，让我们使用`ls`程序来演示不同类型的路径。
 
 ```bash
 $ cd ~/classes/msan501/images-parrt
@@ -118,7 +119,7 @@ $ ls /Users/parrt/classes
 msan501/
 ```
 
-Any path that does not start with `~` or `/` is called a *relative pathname*. For completeness, note that `..` means the directory above the current working directory:
+任何不以`~`或`/`开头的路径都称为*相对路径名*。为了完整起见，请注意`..`表示当前工作目录上级的目录：
 
 ```bash
 $ cd ~/classes/msan501/images-parrt
@@ -128,16 +129,15 @@ $ ls ../..
 msan501/
 ```
 
-Sometimes you will see me use `/tmp`, which is a temporary directory or dumping ground.  All files in that directory are usually erased when you reboot.
+有时您会看到我使用`/ tmp`，这是一个临时目录或垃圾场。重新启动时，该目录中的所有文件通常都会被删除。
 
-## Loading text files
+## 加载文本文件
 
-As we discussed early in the semester, files are just bits. It's how we interpret the bits that is meaningful. The bits could represent an image, a movie, an article, data, Python program text, whatever. Let's call any file containing characters a *text file* and anything else a *binary file*.
+正如我们在课程早期讨论的那样，文件只是一些位。这就是我们解释有意义的位的方式。 这些位可以代表图像，电影，文章，数据，Python 程序文本等等。 让我们将任何包含字符的文件成为文本文件，任何其他文件成为二进制文件。
 
-Text files are usually 1 byte per character (8 bits) and have the notion of a line. A line is just a sequence of characters terminated with either `\r\n` (Windows) or `\n` (UNIX, Mac). A text file is usually then a sequence of lines. Download this sample text file, [IntroIstanbul.txt](https://raw.githubusercontent.com/parrt/msan501/master/notes/data/IntroIstanbul.txt) so we have something to work with. You can save it in `/tmp` or whatever directory you are using for in class work. For the purposes of this discussion, I have data files in a subdirectory called `data` of this notes directory.
+文本文件通常是每个字符 1 个字节（8 位），并具有行的概念。 一行只是以`\r\n`（Windows）或`\n`（UNIX，Mac）终止的字符序列。 文本文件通常是一系列行。 下载此示例文本文件[`IntroIstanbul.txt`](https://raw.githubusercontent.com/parrt/msan501/master/notes/data/IntroIstanbul.txt)，以便我们可以使用。 您可以将它保存在`/tmp`或您在课堂作业中使用的任何目录中。 出于本讨论的目的，我将数据文件放在此`notes`目录的名为`data`的子目录中。
 
-The first 10 lines of the file look like:
-
+该文件的前 10 行如下所示：
 
 ```python
 ! head -10 data/IntroIstanbul.txt
@@ -151,17 +151,9 @@ in the world to bridge two continents.
 '''
 ```
 
+你可以忽略前面的`!`，因为它只是告诉这个 Jupyter 笔记本运行后面的终端命令。 如果你想要的话，在这种情况下你可以把`!`想象成`$`终端提示符。
 
-
-
-
-
-
-
-You can ignore the "`!`" on the front as it is just telling this Jupyter notebook to run the terminal command that follows. If you want you can think of `!` as the `$` terminal prompt in this context.
-
-Now, let's examine the contents of the file in a raw fashion rather than with a text editor. The `od` command (octal dump) is useful for looking at the bytes of the file. Use option `-c` to see the contents as 1-byte characters:
-
+现在，让我们以原始方式而不是文本编辑器检查文件的内容。 `od`命令（八进制转储）对于查看文件的字节很有用。 使用选项`-c`将内容看作 1 字节字符：
 
 ```python
 ! od -c data/IntroIstanbul.txt | head -5
@@ -176,21 +168,20 @@ Now, let's examine the contents of the file in a raw fashion rather than with a 
 ```
 
 
-That "`| head -5`" *pipes* (the vertical bar "`|`" looks like a pipe) the output of the `od` command to the `head` program, which gives this the first five lines of the output. When we have a lot of output we can also pipe the output to the `more` program to paginate long output.
+那个`| head -5`（竖线`|`看起来像一个管道）将`od`命令通过管道连接到`head`程序，它给出了前五行的输出。 当我们有很多输出时，我们也可以将输出传递给`more`程序来对长输出进行分页。
 
 ```bash
 $ od -c data/IntroIstanbul.txt | more
 ...
 ```
 
-The `\n` character you see represents the single character we know as the carriage return. The numbers on the left are the character offsets into the file (it looks like they are octal not decimal, btw; use `-A d` to get decimal addresses).
+你看到的`\n`字符代表我们知道的回车符。左边的数字是文件中的字符偏移量（看起来它们是八进制而不是十进制，顺便说一句；使用`-A d`来获取十进制地址）。
 
-Let's look at some common programming patterns dealing with text files.
+让我们看一些处理文本文件的常见编程模式。
 
-### Pattern: Load all file contents into a string.
+### 模式：将所有文件内容加载到字符串中
 
-The sequence of operation is open, load, close.
-
+操作序列是打开，加载，关闭。
 
 ```python
 with open('data/IntroIstanbul.txt') as f:
@@ -205,21 +196,13 @@ of the citys allure is its setting, where Europe faces Asia acr­oss
 ```
 
 
+### 练习
 
+*不要剪切和粘贴*，键入该序列并确保您可以从 Python 打印文件的内容。 使用您保存`IntroIstanbul.txt`的任何目录，而不是`data`。
 
+### 模式：将文件的所有单词加载到列表中
 
-
-
-
-
-### Exercise
-
-*Without cutting and pasting*, type in that sequence and make sure you can print the contents of the file from Python. Instead of `data`, use whatever directory you saved that IntroIstanbul.txt in.
-
-### Pattern: Load all words of file into a list.
-
-This pattern is just an extension of the previous where we `split()` on the space character to get a list:
-
+这个模式只是前面我们`split()`空格字符来获取列表的扩展：
 
 ```python
 with open('data/IntroIstanbul.txt') as f:
@@ -230,29 +213,25 @@ print(words[0:100]) # print first 100 words
 # ['\n', '', '\n', '', '\n', '', '', '', '\n', '', '', '', '', '', '\n', '', '', '', '', '', '', '', 'The', 'City', 'and', 'ITS', 'People\n', '', '', '', '', '', '', '', 'Istanbul', 'is', 'one', 'of', 'the', 'worlds', 'most', 'venerable', 'cities.', 'Part\n', '', '', '', '', '', '', '', 'of', 'the', 'citys', 'allure', 'is', 'its', 'setting,', 'where', 'Europe', 'faces', 'Asia', 'acr\xadoss\n', '', '', '', '', '', '', '', 'the', 'winding', 'turquoise', 'waters', 'of', 'the', 'Bosphorus,', 'making', 'it', 'the', 'only', 'city\n', '', '', '', '', '', '', '', 'in', 'the', 'world', 'to', 'bridge', 'two', 'continents.\n', '', '', '', '']
 ```
 
+因为我们在空格字符上进行拆分，所以一行中的换行符和多个空格字符会产生无效的“单词”。我们需要在使用之前将该列表转换为新列表。
 
+### 练习
 
+使用*过滤*编程模式，过滤`words`中的大于 1 个字符的单词；放入另一个名为`words2`的列表中。提示，`len(s)`获取字符串`s`的长度。[【答案】](https://github.com/parrt/msan501/blob/master/notes/code/files.py)
 
-Because we are splitting on the space character, newlines and multiple space characters in a row yield "words" that are not useful. We need to transform that list into a new list before it is useful.
+### 练习
 
-### Exercise
+通过编写一个名为`getwords`的函数，将所有这些放在一起，该函数将`filename`作为参数并返回长于一个字符的单词列表。这是“将文件的所有单词加载到列表中”模式和上一个练习的组合。[【答案】](https://github.com/parrt/msan501/blob/master/notes/code/files.py)
 
-Using the *filter* programming pattern filters `words` for only those words greater than 1 character; place into another list called `words2`. Hint `len(s)` gets the length of string `s`. [[solutions](https://github.com/parrt/msan501/blob/master/notes/code/files.py)]
+## 加载文件的所有行
 
-### Exercise
+将文件内容读入字符串并不总是那么有用。我们通常希望处理我们单词，或文本文件的行，像刚才看到的那样。自然语言处理（NLP）将专注于使用单词，但让我们看一些数据文件，这些文件通常将文件结构化为数据行。每行代表观测，数据点或记录。
 
-Put all of this together by writing a function called `getwords` that takes `filename` as a parameter and returns the list of words greater than one character long. This is a combination of the "load all words of the file into a list" pattern and the previous exercise. [[solutions](https://github.com/parrt/msan501/blob/master/notes/code/files.py)]
+我们可以用`\n`来分割文本内容来获取行，但是 Python 为我们提供了这样的功能。 为了给我们一些数据，请下载[`price.txt`](https://raw.githubusercontent.com/parrt/msan501/master/notes/data/prices.txt)，其中包含价格清单，每个价格一行。 这是另一种非常常见的编程模式：
 
-## Loading all lines of a file
+### 模式：将文件的所有行读入列表。
 
-Reading the contents of a file into a string is not always that useful. We typically want to deal with the words, as we just saw, or the lines of a text file.  Natural language processing (NLP) would focus on using the words, but let's look at some data files, which typically structure files as lines of data.  Each line represents an observation, data point, or record. 
-
-We could split the text contents by `\n` to get the lines, but it is so common that Python provides functions to do that for us. To give us some data to play with, download [prices.txt](https://raw.githubusercontent.com/parrt/msan501/master/notes/data/prices.txt) that has a list of prices, one price per line. Here's another very common programming pattern:
-
-### Pattern: Read all of the lines of the file into a list.
-
-The sequence is open, read lines, close:
-
+序列是打开，读取行，关闭：
 
 ```python
 with open('data/prices.txt') as f:
@@ -274,23 +253,17 @@ prices[0:10]
 ```
 
 
+### 练习
 
+*不要剪切和粘贴*，输入该代码并确保您可以将文件的行读入列表。
 
+### 练习
 
+在列表的每个元素上使用`strip()`函数，以便得到：`['0.605', '0.600', '0.594', ...]`。 使用列表推导式将价格*映射*到价格列表的新版本。[【答案】](https://github.com/parrt/msan501/blob/master/notes/code/files.py)
 
+### 将字符串列表转换为 numpy 数组
 
-### Exercise
-
-*Without cutting and pasting*, type in that code and make sure you can read the lines of the file into a list. 
-
-### Exercise
-
-Use the `strip()` function on each element of the list so that you get: `['0.605', '0.600', '0.594', ...]`. Use a list comprehension to *map* the prices to a new version of the prices list. [[solutions](https://github.com/parrt/msan501/blob/master/notes/code/files.py)]
-
-### Converting list of strings to numpy array
-
-The numbers have the `\n` character on the end but that's not a problem because we can easily convert that using [NumPy](http://www.numpy.org/):
-
+数字末尾有`\n`字符，但这不是问题，因为我们可以使用 [NumPy](http://www.numpy.org/) 轻松转换它：
 
 ```python
 import numpy as np
@@ -307,19 +280,14 @@ objviz(prices2)
 '''
 ```
 
-
-
-
-
 ![svg](img/3.1_files_26_1.svg)
 
 
+### 练习
 
-### Exercise
+将此转换添加到上一个练习中，并确保获得了`array`输出。 （我试图给你键入代码的重复经验，从文件中读取数据并以某种方式处理它。）[【答案】](https://github.com/parrt/msan501/blob/master/notes/code/files.py)
 
-Add this conversion to the previous exercise and make sure you get an `array` as output.  (I'm trying to give you repeated experience typing code that reads data from a file and processes it in some way.) [[solutions](https://github.com/parrt/msan501/blob/master/notes/code/files.py)]
-
-## Loading CSV files
+## 加载 CSV 文件
 
 Let's look at a more complicated data file. Download [heights.csv](https://raw.githubusercontent.com/parrt/msan501/master/notes/data/player-heights.csv), which starts out like this:
 
