--- a/docs/3.1_files.md
+++ b/docs/3.1_files.md
@@ -1,7 +1,7 @@
 
 # 加载文件
 
-本讲座的目的是学习如何从笔记本电脑磁盘上的文件中提取数据。 我们将加载文本文件中的单词和数据文件中的数字。 在此过程中，我们将了解文件名和文件路径的更多信息。 我们的通用分析程序模板的前两个元素，表示获取数据然后将其加载到数据结构中：
+本课程的目的是学习如何从笔记本电脑磁盘上的文件中提取数据。 我们将加载文本文件中的单词和数据文件中的数字。 在此过程中，我们将了解文件名和文件路径的更多信息。 我们的通用分析程序模板的前两个元素，表示获取数据然后将其加载到数据结构中：
 
 1. 获取数据，这意味着找到合适的文件，或从 Web 收集数据并存储在文件中
 2. 从磁盘加载数据并放入组织成数据结构的内存中
@@ -289,8 +289,7 @@ objviz(prices2)
 
 ## 加载 CSV 文件
 
-Let's look at a more complicated data file. Download [heights.csv](https://raw.githubusercontent.com/parrt/msan501/master/notes/data/player-heights.csv), which starts out like this:
-
+我们来看一个更复杂的数据文件。 下载[`heights.csv`](https://raw.githubusercontent.com/parrt/msan501/master/notes/data/player-heights.csv)，其开头如下：
 
 ```python
 ! head -4 data/player-heights.csv
@@ -303,12 +302,11 @@ Football height, Basketball height
 '''
 ```
 
-It is still a text file, but now we start to get the idea that text files can follow a particular format. In this case, we recognize it as a *comma-separated value* (CSV) file. It also has a header line that names the columns, which means we need to treat the first line differently than the remainder of the file.
+它仍然是一个文本文件，但现在我们开始认为文本文件可能遵循特定的格式。 在这种情况下，我们将其识别为*逗号分隔值*（CSV）文件。 它还有给列命名的标题行，这意味着我们需要区分对待第一行和文件其余部分。
 
-### Pattern: Load a CSV file into a list of lists
+### 模式：将 CSV 文件加载到列表的列表中
 
-We already know how to open a file and get the lines, so let's do that and also separate the lines into the header and the data components:
-
+我们已经知道如何打开文件并获取行，所以让我们这样做，并将行分为标题和数据成分：
 
 ```python
 import numpy as np
@@ -327,12 +325,6 @@ lines[0:5]
  '6.25, 6.579999924']
 '''
 ```
-
-
-
-
-
-
 
 
 ```python
@@ -356,25 +348,25 @@ Football height, Basketball height
 ```
 
 
-### Exercise
+### 练习
 
-As an exercise, type in that code and make sure you get the header and the first five lines of data printed out.
+作为练习，输入该代码并确保打印出标题和前五行数据。
 
-### Exercise
+### 练习
 
-Each row of the data is a string with two numbers in it. We need to convert that string into a list with two floating-point numbers using `split(',')`.  Combining all of those two-element lists into an overall list gives us the two-dimensional table we need, which is our next exercise.
+数据的每一行都是一个包含两个数字的字符串。 我们需要使用`split(',')`将该字符串转换为带有两个浮点数的列表。 将所有两个元素的列表组合成一个整体列表，为我们提供了我们需要的二维表，这是我们的下一个练习。
 
-Write a function called `getcsv(filename)` that returns a list of row lists, where the first row is the header row. Strip off any `\n` char on the end of lines. The output should look like:
+编写一个名为`getcsv(filename)`的函数，它返回一个行列表的列表，其中第一行是标题行。 去掉行末尾的任何`\n`字符。 输出应如下所示：
 
 ```python
 [['6.329999924', ' 6.079999924'], ['6.5', ' 6.579999924'], ['6.5', ' 6.25']]
 ```
 
-Use list comprehensions where you can. [[solutions](https://github.com/parrt/msan501/blob/master/notes/code/files.py)]
+尽可能使用列表推导。[【答案】](https://github.com/parrt/msan501/blob/master/notes/code/files.py)
 
-### Exercise
+### 练习
 
-`import pandas as pd` and then convert the data from the previous exercise into a data frame. Pandas doesn't automatically understand that the first row is the header so slice out `data[1:]` as the first argument to the `pd.DataFrame()` data frame constructor and then pass `data[0]` as the `columns` parameter. Print it out and you should see something like:
+`import pandas as pd`，然后将上一个练习中的数据转换为数据帧。 Pandas 不会自动理解第一行是标题，因此将切片`data[1:]`用作`pd.DataFrame()`数据帧构造函数的第一个参数，然后传递`data[0]`作为 `columns`参数。 打印出来，你应该看到类似的东西：
 
 ```
    Football height  Basketball height
@@ -384,12 +376,11 @@ Use list comprehensions where you can. [[solutions](https://github.com/parrt/msa
 ...
 ```
 
-[[solutions](https://github.com/parrt/msan501/blob/master/notes/code/files.py)]
+[【答案】](https://github.com/parrt/msan501/blob/master/notes/code/files.py)
 
-## Using Pandas to load CSV files
+## 使用 Pandas 加载 CSV 文件
 
-Of course, loading CSV is something that data scientists need to do all of the time and so there is a simple function you can use from [Pandas](http://pandas.pydata.org),  another library you will probably become very familiar with:
-
+当然，加载 CSV 是数据科学家需要一直做的事情，所以你可以在 [Pandas](http://pandas.pydata.org) 中使用一个简单的函数，你可能会变得非常熟悉：
 
 ```python
 import pandas as pd
@@ -405,10 +396,9 @@ prices.head(5)
 | 3 | 0.592 |
 | 4 | 0.600 |
 
-(`header=None` indicates that there are no column names in the first line of the file.)
+(`header=None`表示文件的第一行中没有列名。)
 
-This even works for CSV files with header rows:
-
+这甚至适用于带有标题行的 CSV 文件：
 
 ```python
 data = pd.read_csv('data/player-heights.csv')
@@ -424,15 +414,15 @@ data.head(5)
 | 3 | 6.25 | 6.58 |
 | 4 | 6.50 |  |
 
-We'll see this stuff again in [data frames](dataframes.ipynb).
+我们将在[数据帧](dataframes.ipynb)中再次看到这些内容。
 
-## Processing files line by line
+## 逐行处理文件
 
-The previous mechanism for getting lines of text into memory works well except that it requires we load everything into memory all at once. That is pretty inefficient and limits the size of the data we can process to the amount of memory we have.
+将文本行放入内存的先前机制很有效，只是它需要我们将所有内容一次性加载到内存中。这是非常低效的，并且将我们可以处理的数据的大小限制为我们拥有的内存量。
 
-### Pattern: Read data line by line not all at once.
+### 模式：多次地逐行读取数据
 
-We can use a for-each loop where the sequence of data is the file descriptor:
+我们可以使用`for`循环，其中数据序列是文件描述符：
 
 ```python
 with open('data/prices.txt') as f:
@@ -458,19 +448,17 @@ with open('data/prices.txt') as f:
 '''
 ```
 
+### 练习
 
-### Exercise
+键入处理文件的行的新版本。不要剪切和粘贴！
 
-Type in this new version of processing the lines of the file. No cutting and pasting!
+### 练习
 
-### Exercise
+创建一个名为`getsum`的函数，它将文件名字符串作为参数，并返回该文件中行值之和。 不要使用`readlines()`函数。 在列表推导式中使用`for line in f`循环手动获取行的列表。 使用文件名`data/prices.txt`调用`getsum`并打印出价格总和。 使用`sum(...)`来求和列表推导创建的列表。
 
-Creative a function called `getsum` that takes a filename string as a parameter and returns the sum of values from the lines in that file. Do not use the `readlines()` function. Use a `for line in f` type loop inside a list comprehensionTo manually get the list of lines. Call `getsum` with filename `data/prices.txt` and print out the sum of prices. Use `sum(...)` to total the list created by your list comprehension.
+## 关闭文件后的操作
 
-## Operations after closing the file
-
-Keep in mind that once you close the file, you cannot read anymore data from it:
-
+请记住，关闭文件后，您无法再从中读取数据：
 
 ```python
 f = open('data/prices.txt')
@@ -481,14 +469,14 @@ Traceback (most recent call last):
 ValueError: I/O operation on closed file
 ```
 
-## Summary
+## 总结
 
-The key programming patterns to take away from this lecture are:
+本课程的主要编程模式是：
 
-* **Pattern**: Load all file contents into a string.
-* **Pattern**: Load all words of file into a list.
-* **Pattern**: Read all of the lines of the file into a list.
-* **Pattern**: Load list of numbers into a numpy array.
-* **Pattern**: Load a CSV file into a 2D numpy array.
+* **模式**：将所有文件内容加载到字符串中。
+* **模式**：将文件的所有单词加载到列表中。
+* **模式**：将文件的所有行读入列表。
+* **模式**：将数字列表加载到 numpy 数组中。
+* **模式**：将 CSV 文件加载到 2D numpy 数组中。
 
-You should be able to code those patterns quickly and easily, and without cutting and pasting from stackoverflow.
+您应该能够快速，轻松地编写这些模式，而无需从 stackoverflow 中剪切和粘贴。
