--- a/docs/5.2_git.md
+++ b/docs/5.2_git.md
@@ -20,39 +20,41 @@
 
 **跟踪变化**
 
-As with the Time Machine backup, git tracks snapshots as the difference from the last time you requested a snapshot.  Each snapshot is called a *commit* (and programmers think of these commits as *transactions*.) You should request a commit to lock in a logical chunk of work, such as the addition of a feature or fixing of a bug. Having a complete list of changes is extremely useful. For example, here is a chunk taken out of the middle of my commits on the ANTLR repository as shown by the [SourceTree](https://www.sourcetreeapp.com) git GUI:
+与 Time Machine 备份一样，git 跟踪快照与上次请求快照时的差异。 每个快照都被称为*提交*（并且程序员将这些提交视为*事务*。）您应该请求提交来锁定逻辑工作块，例如功能添加或错误修复。 拥有完整的更改列表非常有用。例如，这是一个块，取自 ANTLR 存储库中我的提交，由 [SourceTree](https://www.sourcetreeapp.com) git GUI 所示：
 
 ![commits](img/commits.png)
 
-<img src="img/redbang.png" width=30 align="left">You can go back and look at changes made to the repository for any commit. Whether using PyCharm or git, I find it very important to look back at recent commits to see what changes have introduced a bug.  Sometimes I decide to abandon a small piece of what's going on and flip a file back to an old version. If you go down a wrong path and would like to revert all those changes, git can easily do that. It can even reset the repository to the state of some earlier commit.
+<img src="img/redbang.png" width=30 align="left">
 
-**Mirroring repositories at github.com**
+您可以返回并查看对存储库的任何提交所做的更改。 无论是使用 PyCharm 还是 git，我发现回顾最近的提交来查看哪些更改引入了错误非常重要。 有时我决定放弃一小部分正在做的事情并将文件翻转回旧版本。 如果你走错了路并希望恢复所有这些变化，git 可以很容易地做到这一点。 它甚至可以将存储库重置为某些早期提交的状态。
 
-Continuing with the analogy now, github.com is like the off-site cloud-based backup I use. We will typically keep a complete copy of our local repositories at github.com. As with committing changes, we also have to specifically *push* the local repository to github. Every push ensures that the complete file set and git change database (in .git subdirectory) is mirrored at github.  As a side effect of this, of course, you now have a backup of your work. The loss of your laptop is not catastrophic, at least as far as your coursework is concerned.
+**github.com 上的镜像仓库**
 
-The reason to use github is that I can also access your repositories then, whereas I have no access to your laptop hard drive. To grade your projects, I will *clone* your repository onto my hard disk. If you make changes, I can *pull* those in. I might also edit your code to make comments and then *push* my copy of the repository back to github and then you can *pull* those changes back to your hard drive. Everything will be in sync and it will not overwrite changes by mistake. This is how multiple programmers communicate and is a bit beyond this introductory lecture, but you should be aware of this in the abstract at least.
+继续这个类比，github.com 就像我使用的基于云的异地备份。 我们通常会在 github.com 上保留我们本地存储库的完整副本。与提交更改一样，我们还必须将本地存储库*推送*到 github。每次推送都可以确保完整的文件集和 git 更改数据库（在`.git`子目录中）备份到了 Github 上。 当然，作为这样的副作用，您现在拥有了您的工作的备份。 丢失你的笔记本电脑并不是灾难性的，至少就你的工作而言。
 
-It's also the case that you can use github.com to work on the same software on two different computers, such as a laptop and a desktop.  Having two computers with the same software means they have copies. That introduces the possibility that you will overwrite the correct/latest version of your software. Or, you will forget that you had made changes on your laptop but have now made a bunch of changes on your desktop.  You have changes on two different computers. Resolving things can be tricky and error-prone so we use push/pull to github to keep things in sync.
+使用 github 的原因是我也可以访问你的存储库，而我无法访问你的笔记本电脑硬盘。 为了给项目评分，我将将您的存储库*克隆*到我的硬盘上。 如果你进行了更改，我可以*拉取*那些。我也可以编辑你的代码来发表评论，然后将我的存储库副本*推*回 github，然后你可以将这些更改*拉*回你的硬盘。 一切都是同步的，它不会错误地覆盖更改。 这是多个程序员之间的沟通方式，并且有点超出了这个介绍性的课程，但你至少应该在抽象中意识到这一点。
 
-## Getting started on the images project
+还有一种情况是，您可以使用 github.com 在两台不同的计算机上处理相同的软件，例如笔记本电脑和台式机。 拥有两台具有相同软件的计算机意味着它们具有副本。 这会使您可能覆盖软件的正确/最新版本。 或者，您会忘记您已经对笔记本电脑进行了更改，但现在已经在桌面上进行了一系列更改。 您在两台不同的计算机上进行了更改 解决问题可能很棘手且容易出错，所以我们`push/pull`到/从 github 来保持同步。
 
-You will receive a link to github that is an invitation to create a repository for the images project. After you accept, it will give you a link to the private repository (only you and I can see the contents of the repository). My github id is `parrt` and so my URL is:
+## 图像项目入门
+
+您将收到一个指向 github 的链接，该链接是为图像项目创建存储库的邀请。 在您接受之后，它将为您提供指向私有存储库的链接（只有您和我可以看到存储库的内容）。 我的 github id 是`parrt`，所以我的 URL 是：
 
 ```
 https://github.com/USF-MSAN501/images-parrt
 ```
 
-Each class I teach will have be its own organization at github, in this case: `https://github.com/USF-MSAN501`. Each person will have a repository under that directory at github, one per project.
+我教的每个课程都将在 github 上拥有自己的组织，在这种情况下：`https://github.com/USF-MSAN501`。每个人在 github 的目录下都有一个存储库，每个项目一个。
 
-Our first step is to *clone* that empty repository from github onto our local disk. From your repository page and github, copy the HTTPS URL, as shown here:
+我们的第一步是从 github *克隆*空存储库到我们的本地磁盘上。从您的 github 存储库页面，复制 HTTPS URL，如下所示：
 
 <img src=img/github-setup.png width=420>
 
-If you choose the SSH version, it will require that we set up SSH keys for authentication. That is what you will ultimately want to do, but for now, don't worry about that and just use HTTPS.
+如果选择 SSH 版本，则需要我们为身份验证设置 SSH 密钥。这是你最后想要做的，但就目前而言，不要担心，只需使用 HTTPS。
 
-**Cloning onto your laptop**
+**克隆到你的笔记本**
 
-Now, open the terminal or other bash shell program and create a directory that will house all of your MSAN projects in an orderly fashion. I strongly recommend you create an overall directory under which you create a directory for each class. From the command line it looks like this:
+现在，打开终端或其他 bash shell 程序并创建一个目录，该目录将以有序的方式容纳所有 MSAN 项目。 我强烈建议您创建一个整体目录，在该目录下为每个课程创建一个目录。 从命令行看起来像这样：
 
 ```bash
 $ pwd             # print working directory
@@ -63,17 +65,19 @@ $ mkdir msan501   # create directory msan501 under classes
 $ cd msan501      # jump into msan501
 ```
 
-<img src="img/redbang.png" width=30 align="left">Do not use spaces in any filename or directory you ever create. Many open source projects are developed under UNIX and UNIX hates spaces in filenames. Things will mysteriously fail to work if you use spaces.
+<img src="img/redbang.png" width=30 align="left">
 
-Depending on how you have your shell set up, you might see the current working directory to the left of the `$` prompt. Here is what my prompt looks like:
+不要在您创建的任何文件名或目录中使用空格。 许多开源项目是在 UNIX 下开发的，UNIX 讨厌文件名中的空格。 如果你使用空格，东西会神秘地无效。
+
+根据您设置 shell 的方式，您可能会看到`$`提示符左侧的当前工作目录。 这是我的提示符：
 
 ```bash
 beast:~/classes/msan501 $ 
 ```
 
-The name of my machine is beast and `~` is shorthand for `/Users/parrt` or whatever your user ID is.
- 
-Now we have an appropriate structure and it's time to clone your repository under `/Users/parrt/classes/msan501`:
+我的机器名称是beast，`~`是`/Users/parrt`的简写或者你的用户 ID。
+
+现在我们有了一个合适的结构，是时候在`/Users/parrt/classes/msan501`下克隆你的存储库了：
 
 ```bash
 $ git clone https://github.com/USF-MSAN501/images-parrt.git
@@ -83,14 +87,14 @@ $ cd images-parrt/
 $ ls
 ```
 
-After cloning, you have an empty directory under `msan501` called `images-YOURID`. It is under this directory that you will do all of your work. **This directory is called the repository**. Technically it's not empty, if you ask for all files in the current directory with `-a` option on `ls` command, you will see the subdirectory used by git to store snapshots:
+克隆后，在`msan501`下有一个名为`images-YOURID`的空目录。 您可以在此目录下完成所有工作。**此目录称为存储库**。从技术上讲，它不是空的，如果你在`ls`命令中使用`-a`选项，请求当前目录中的所有文件，你将看到 git 用来存储快照的子目录：
 
 ```bash
 $ ls -a
 ./                 ../                .git/
 ```
 
-**Files managed by git**
+**由 git 管理的文件**
 
 After you create a repository at github and clone it locally, you can create all sorts of files under the directory managed by git, but git ignores them until you `add` them. The `add` command is basically notifying the repository that it should care about that file.  You can have whatever other files you want laying around. Git will simply ignore them unless you `add` them.
 
